Removed warnings when compiling